--- a/java EE/myWeb/src/main/webapp/WEB-INF/web.xml
+++ b/java EE/myWeb/src/main/webapp/WEB-INF/web.xml
@@ -29,4 +29,33 @@
     <servlet-name>DumpServlet</servlet-name>
     <url-pattern>/admin/dump.view</url-pattern>
   </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>CreateCustomerController</display-name>
+    <servlet-name>CreateCustomerController</servlet-name>
+    <servlet-class>com.systex.controller.CreateCustomerController</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>CreateCustomerController</servlet-name>
+    <url-pattern>/customer/ccController.do</url-pattern>
+  </servlet-mapping>
+  <filter>
+    <display-name>EncodingFilter</display-name>
+    <filter-name>EncodingFilter</filter-name>
+    <filter-class>com.systex.util.EncodingFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>EncodingFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+  <servlet>
+    <description></description>
+    <display-name>CreateCustomer</display-name>
+    <servlet-name>CreateCustomer</servlet-name>
+    <servlet-class>com.systex.controller.CreateCustomer</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>CreateCustomer</servlet-name>
+    <url-pattern>/customer/createCustomer</url-pattern>
+  </servlet-mapping>
 </web-app>
