--- a/Spring/P20240930/src/main/resources/application.properties
+++ b/Spring/P20240930/src/main/resources/application.properties
@@ -1,7 +1,20 @@
-spring.application.name=lottery
+spring.application.name=P20240930
 
-server.servlet.context-path=/lottery
+server.servlet.context-path=/P20240930
 server.error.whitelabel.enabled=false
 
 spring.mvc.view.prefix=/WEB-INF/pages/
 spring.mvc.view.suffix=.jsp
+
+#H2 Database configuation
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.datasource.url=jdbc:h2:mem:mydb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=welcome1
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+#For DB initialization
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
